--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,11 +32,20 @@ body {
   h2 {
     @apply text-xl font-semibold text-gray-800;
   }
+  h5 {
+    @apply text-3xl font-medium text-brand-dark;
+  }
+  h6 {
+     @apply text-sm md:text-2xl font-medium text-brand-dark;
+  }
+  p {
+    @apply text-base font-normal text-brand-dark;
+  }
   a {
     @apply text-[0.75rem] text-brand-dark font-medium
   }
   .app-container {
-    @apply px-[4.375rem];
+    @apply px-4 md:px-[4.375rem];
   }
 }
 
@@ -52,7 +61,7 @@ body {
 
   .nav-link::after {
     content: '';
-    @apply absolute left-0 bottom-0 w-0 h-[2px] bg-brand transition-all duration-300 ease-in-out;
+    @apply absolute left-0 bottom-0 w-0 h-[2px] bg-brand-dark transition-all duration-300 ease-in-out;
   }
 
   .nav-link:hover::after {
