--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,6 @@
 @plugin './hero.ts';
 @source '@node_modules/@heroui/theme/dist*.{js,ts,jsx,tsx}';
 
-/* Apply tokens to Tailwind theme */
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -17,20 +16,21 @@
   --spacing-layout: var(--layout-x);
 }
 
-/* Global resets & base styles */
 body {
   background: var(--color-background);
   color: var(--color-foreground);
   font-family: var(--font-sans);
 }
 
-/* Base typography */
 @layer base {
   h1 {
     @apply text-2xl font-bold text-gray-900;
   }
   h2 {
-    @apply text-xl font-semibold text-gray-800;
+    @apply text-3xl font-semibold text-gray-800;
+  }
+  h4 {
+     @apply text-[2rem] font-medium text-brand-dark;
   }
   h5 {
     @apply text-3xl font-medium text-brand-dark;
