--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,8 @@
   --color-brand: var(--color-brand);
   --color-brand-dark: var(--color-brand-dark);
   --color-brand-light: var(--color-brand-light);
+  --color-brand-purple: var(--color-brand-purple);
+  --color-light: var(--color-light);
 
   --spacing-layout: var(--layout-x);
 }
@@ -36,7 +38,7 @@ body {
     @apply text-base md:text-4xl text-black font-normal md:font-medium;
   }
   h4 {
-     @apply text-[2rem] font-medium text-brand-dark;
+     @apply text-base md:text-[2rem] font-medium text-brand-dark;
   }
   h5 {
     @apply text-3xl font-medium text-brand-dark;
