feat: user account

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -8,6 +8,7 @@
   --color-brand-light: #ffffff;
   --color-brand-purple: #5504D4;
   --color-light: #F5F5F5;
+  --color-grey: #BCBCBC;
 
    /* Font families */
    --font-sans: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
