--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,7 @@
   --font-montserrat: var(--font-montserrat);
   --font-roboto: var(--font-roboto);
   --font-poppins: var(--font-poppins);
+  --font-lexend: var(--font-lexend-deca);
   
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -17,6 +18,7 @@
   --color-brand-light: var(--color-brand-light);
   --color-brand-purple: var(--color-brand-purple);
   --color-light: var(--color-light);
+  --color-grey: var(--color-grey);
 
   --spacing-layout: var(--layout-x);
 }
