--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -9,6 +9,7 @@
   --color-brand-purple: #5504D4;
   --color-light: #F5F5F5;
   --color-grey: #BCBCBC;
+  --color-grey-2: #B5B5B5;
 
    /* Font families */
    --font-sans: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
