feat: registration done

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -150,3 +150,34 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+@keyframes enter {
+  from {
+    opacity: 0;
+    transform: translateY(-20px) scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+}
+
+@keyframes leave {
+  from {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(-20px) scale(0.95);
+  }
+}
+
+.animate-enter {
+  animation: enter 200ms ease-out forwards;
+}
+
+.animate-leave {
+  animation: leave 150ms ease-in forwards;
+}
+
