--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,7 +66,11 @@ body {
 /* Reusable components & animations */
 @layer components {
   .app-container {
-    @apply px-4 md:px-[4.375rem] max-w-7xl mx-auto;
+    @apply px-4 md:px-[4.375rem] max-w-5xl mx-auto;
+  }
+
+  .dashboard-container {
+    @apply px-4 sm:px-6 lg:px-7.5 max-w-6xl mx-auto w-full;
   }
 
   .text-button {
