--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,7 +66,7 @@ body {
 /* Reusable components & animations */
 @layer components {
   .app-container {
-    @apply px-4 md:px-[4.375rem] max-w-7xl mx-auto;
+    @apply px-4 md:px-17.5 max-w-7xl mx-auto;
   }
 
   .dashboard-container {
@@ -82,7 +82,7 @@ body {
   }
 
   .icon-button {
-    @apply cursor-pointer text-brand-dark w-6 h-6 md:w-8 md:h-8 transition-transform duration-300 ease-in-out;
+    @apply cursor-pointer text-brand-dark w-7 h-7 md:w-8 md:h-8 transition-transform duration-300 ease-in-out;
   }
 
   .icon-button:hover {
@@ -99,7 +99,7 @@ body {
 
   .nav-link::after {
     content: '';
-    @apply absolute left-0 bottom-0 w-0 h-[2px] bg-brand-dark transition-all duration-300 ease-in-out;
+    @apply absolute left-0 bottom-0 w-0 h-0.5 bg-brand-dark transition-all duration-300 ease-in-out;
   }
 
   .nav-link:hover::after {
